--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: 'JuliaKM'
 description: 'Writer and developer in Durham, NC'
 
 # Images
-avatar: 'avatar.jpg'
+avatar: 'avatar.png'
 background: 'background.jpg'
 favicon: 'favicon.ico'
 
