--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: 'writer and developer in Durham, NC'
 
 # Images
 avatar: 'avatar.png'
-background: 'blue-ridge.jpg'
+background: 'garden.jpg'
 favicon: 'favicon.ico'
 
 # Online profiles
